2011-06-04 Riccardo Mottola <rm@gnu.org>

	* LPController.m
	* LapisPuzzleView.h
	* LapisPuzzleView.m
	Warning fixes and cleanup.

2011-06-01 Riccardo Mottola <rm@gnu.org>

	* LapisPuzzleView.m:
	Warning fix and and memory leak.

2011-06-01 Riccardo Mottola <rm@gnu.org>

	* LapisPuzzleView.m:
	Warning fix and cleanup.

2011-05-05 Riccardo Mottola <rm@gnu.org>

	* main.m:
	* LapisPuzzleView.m:
	Trivial warning fix.

2011-05-05 Riccardo Mottola <rm@gnu.org>

	* main.m:
	Cleanup and make work with latest gnustep.